// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpressionField > renders empty expression field with schema 1`] = `
<div>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="OUIA-Generated-Card-_r_0_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    data-testid="#__field-wrapper"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__actions"
      >
        <div
          aria-labelledby="#-legend"
          class="pf-v6-c-form__group"
          role="group"
        >
          <div
            class="pf-v6-c-form__group-control pf-m-stack"
          >
            <div
              class="pf-v6-c-menu-toggle pf-m-full-width pf-m-typeahead"
              id="#"
            >
              <div
                class="pf-v6-c-text-input-group pf-m-plain"
              >
                <div
                  autocomplete="off"
                  class="pf-v6-c-text-input-group__main"
                  data-testid="#__expression-list-typeahead-select-input"
                  id="#-typeahead-select-input"
                >
                  <span
                    class="pf-v6-c-text-input-group__text"
                  >
                    <input
                      aria-label="# expression list"
                      class="pf-v6-c-text-input-group__text-input"
                      placeholder="Select or write an expression"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
                <div
                  class="pf-v6-c-text-input-group__utilities"
                />
              </div>
              <button
                aria-expanded="false"
                aria-label="# expression list toggle"
                class="pf-v6-c-menu-toggle__button"
                data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-_r_5_"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
             
            Expression
             
            <div
              style="display: contents;"
            >
              <span
                aria-label="More info for Expression field"
                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                data-ouia-component-id="OUIA-Generated-Button-plain-_r_7_"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpressionField > renders expression field with selection 1`] = `
<div>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="OUIA-Generated-Card-_r_8_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    data-testid="#__field-wrapper"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__actions"
      >
        <div
          aria-labelledby="#-legend"
          class="pf-v6-c-form__group"
          role="group"
        >
          <div
            class="pf-v6-c-form__group-control pf-m-stack"
          >
            <div
              class="pf-v6-c-menu-toggle pf-m-full-width pf-m-typeahead"
              id="#"
            >
              <div
                class="pf-v6-c-text-input-group pf-m-plain"
              >
                <div
                  autocomplete="off"
                  class="pf-v6-c-text-input-group__main"
                  data-testid="#__expression-list-typeahead-select-input"
                  id="#-typeahead-select-input"
                >
                  <span
                    class="pf-v6-c-text-input-group__text"
                  >
                    <input
                      aria-label="# expression list"
                      class="pf-v6-c-text-input-group__text-input"
                      placeholder="Select or write an expression"
                      type="text"
                      value="Simple"
                    />
                  </span>
                </div>
                <div
                  class="pf-v6-c-text-input-group__utilities"
                >
                  <button
                    aria-label="Clear input value"
                    class="pf-v6-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-_r_e_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    data-testid="#__expression-list__clear"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__icon"
                    >
                      <svg
                        aria-hidden="true"
                        data-testid="times-icon"
                        role="img"
                      >
                        <path />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                aria-expanded="false"
                aria-label="# expression list toggle"
                class="pf-v6-c-menu-toggle__button"
                data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-_r_d_"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
             
            Simple
             
            <div
              style="display: contents;"
            >
              <span
                aria-label="More info for Simple field"
                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                data-ouia-component-id="OUIA-Generated-Button-plain-_r_g_"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body pf-v6-c-form kaoto-form__label"
      data-testid="#__children"
    >
      <div
        class="pf-v6-c-form__group"
        data-testid="simple.expression__field-wrapper"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="simple.expression"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              Expression
            </span>
            <span
              aria-hidden="true"
              class="pf-v6-c-form__label-required"
            >
               
              *
            </span>
          </label>
            
          <span
            class="pf-v6-c-form__group-label-help"
          >
            <div
              style="display: contents;"
            >
              <span
                aria-label="More info for Expression field"
                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                data-ouia-component-id="OUIA-Generated-Button-plain-_r_k_"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </span>
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-input-group"
          >
            <div
              class="pf-v6-c-input-group__item pf-m-fill"
            >
              <span
                class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both"
              >
                <textarea
                  aria-describedby="simple.expression-popover"
                  aria-invalid="false"
                  id="simple.expression"
                  name="simple.expression"
                  role="textbox"
                  rows="2"
                  type="text"
                />
              </span>
            </div>
            <div
              class="pf-v6-c-input-group__item"
            >
              <button
                aria-label="Open suggestions"
                class="pf-v6-c-button pf-m-plain kaoto-form__suggestions-button"
                data-ouia-component-id="OUIA-Generated-Button-plain-_r_l_"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                data-testid="simple.expression__open-suggestions-button"
                title="Open suggestions (Ctrl+Space)"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    data-testid="lightbulb-icon"
                    role="img"
                  >
                    <path />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Clear expression field"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-_r_m_"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                data-testid="simple.expression__clear"
                title="Clear expression field"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    data-testid="times-icon"
                    role="img"
                  >
                    <path />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
